- New DB Provider with Downloads  - New UI option to manage downloads

--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -159,7 +159,6 @@
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
-                <data android:scheme="" />
                 <data android:scheme="file"/>
                 <data android:scheme="ftp"/>
                 <data android:scheme="content"/>
@@ -195,7 +194,6 @@
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
-                <data android:scheme=""/>
                 <data android:scheme="file"/>
                 <data android:scheme="ftp"/>
                 <data android:scheme="content"/>
@@ -448,6 +446,12 @@
                 <action android:name="pct.droid.base.torrent.TorrentBroadcastReceiver.STOP" />
             </intent-filter>
         </receiver>
+
+        <provider
+            android:name="butter.droid.base.database.DBProvider"
+            android:authorities="droid.pc.butter"
+            android:exported="false"
+            android:label="@string/app_name"/>
 
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
 	</application>
