- Iconos - Sync service - Download Service

--- a/base/src/main/AndroidManifest.xml
+++ b/base/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 	<application>
 
 		<service android:name="butter.droid.base.torrent.TorrentService" />
+		<service android:name="butter.droid.base.torrent.DownloadTorrentService" />
 
 	</application>
 
