--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -15,8 +15,10 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <uses-permission android:name="android.permission.READ_SYNC_SETTINGS"/>
+    <uses-permission android:name="android.permission.READ_SYNC_STATS"/>
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
 
     <permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
 
@@ -453,8 +455,9 @@
 
         <provider
             android:name="butter.droid.base.database.DBProvider"
-            android:authorities="droid.pc.butter"
+            android:authorities="@string/app_name_authority"
             android:exported="false"
+            android:syncable="true"
             android:label="@string/app_name"/>
 
         <service
@@ -468,9 +471,7 @@
         </service>
 
         <service
-            android:name="butter.droid.sync.SyncOfflineContentService"
-            android:exported="true"
-            android:process=":sync">
+            android:name="butter.droid.sync.SyncOfflineContentService">
             <intent-filter>
                 <action android:name="android.content.SyncAdapter"/>
             </intent-filter>
