--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ allprojects {
         mavenCentral()
         maven { url 'https://maven.fabric.io/public' }
         maven { url 'http://guardian.github.com/maven/repo-releases' }
+        maven { url 'https://dl.bintray.com/bkkite/maven/' }
     }
 
     //let project evaluate its script first
